--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -7,7 +7,11 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[features]
+emulation = []
+
 [dependencies]
 syn = { version = "1.0.6", features = ["full", "extra-traits"] }
 quote = "1.0.2"
 proc-macro2 = "1.0.6"
+libtock_emulation = { path = "../emulation" }
