Fix build when feature emulation is disabled
When building without --feature emulation all examples had problem with
using #[libtock::main] and unknown import libtock_emulation.
I was unable to get conditional code generation for
Either #[cfg(feature = "emulation")] or if cfg!(feature = "emulation") {
failed in code generation step in examples.

Fix changes the compilation of emulation as non optional, but allows it
be build without std, so every std dependant package in emulation crate
is moved to setup. As clap and zerocopy requires std, it requires them
to be optional, depending on feature emulation.

Function setup in emulation/src/lib.rs is simple 'noop' when emulation
is not enabled, and this allows correct compilation and runtime
regardless of feature emulation.

In addition to support of in libtock-rs build examples, building
external examples (using #[libtock::main] ) must be support so add
external lib interface with libtock_emulation.

Lastly runtime check cfg!(feature = "emulation") does not make sense in
external libtock-rs applications because they don't define this feature
and thus if would evaluate always false.

BUG=b:169525333
TEST=PLATFORM=hifive cargo  build --target=riscv32imc-unknown-none-elf
&& PLATFORM=emulation cargo  --release examples --features emulation

Tested-by: Krzysztof Kanas <kk@semihalf.corp-partner.google.com>
Signed-off-by: Krzysztof Kanas <kk@semihalf.corp-partner.google.com>
Change-Id: Ia03ead76174463527a2a80337d8e04be961a44eb

--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 proc-macro = true
 
 [features]
-emulation = []
+emulation = [ "libtock_emulation" ]
 
 [dependencies]
 syn = { version = "1.0.6", features = ["full", "extra-traits"] }
 quote = "1.0.2"
 proc-macro2 = "1.0.6"
-libtock_emulation = { path = "../emulation" }
+libtock_emulation = { path = "../emulation", optional = true  }
