--- a/emulation/Cargo.toml
+++ b/emulation/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+emulation = ["clap", "zerocopy" ]
+
 [dependencies]
-clap = "2.33.0"
-zerocopy = "0.3.0"
+clap = { version = "2.33.0", optional = true }
+zerocopy = { version = "0.3.0", optional = true }
 
